Version 3.8.3 - 2016-02-06
* Bug fixes (see mercurial logs for details)
* Strip and unquote double-quote from Postgresql schema in search_path
* Don't read historized user when evaluating record rules as it could lead to
  past privilege escalation.

Version 3.8.2 - 2016-01-11
* Bug fixes (see mercurial logs for details)

Version 3.8.1 - 2015-12-16
* Bug fixes (see mercurial logs for details)
* Check all fields when writing a sequence of records, values (CVE-2015-0861)

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Add test for all field methods
* Load po files also in 'override' subdirectory
* Add support for float and integer on Property fields
* Remove foreign-key on create_uid and write_uid
* Prevent deletion of any user
* Manage PostgreSQL schema
* Remove colors attribute on tree view
* Remove style on Report
* Add StateReport to Wizard
* Allow to override ModelSQL._table
* Allow to import backend from entry points
* Add reversed operators to PYSON expressions
* Explicity raise error when creating/writing/deleting models with table_query
* Use CURRENT_TIMESTAMP instead of now
* Use Constraint instance in ModelSQL._sql_constraints
* Only return default record if no domain supplied on ModelSingleton search
* Rule.domain_get returns a domain and Rule.query_get a SQL query
* Add target_search option to Many2One
* Add tables argument to ModelSQL.search_domain
* Rename ir.module.module* into ir.module*

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Use bytes and bytearray for Binary
* Add button_change
* Add support for PyPy
* Add support for psycopg2cffi
* Add noeval on PYSONDecoder
* Add __repr__ to PYSON
* Remove safe_eval
* Add ModelView.view_attributes
* Add pyson attribute on data field tag
* Changed into JSON:
    - record rule domain
    - trigger condition
    - 'states', 'domain', 'spell' and 'colors' view attributes
    - view domain